--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -1,5 +1,6 @@
 <div id="revenue">
   <h3>Total Revenue: <%="#{@invoice.total_revenue(@invoice.merchants.ids)}" %></h3>
+  <h3>Total Discounted Revenue: <%="#{@invoice.dis_revenue(@invoice.merchants.ids)}" %></h3>
 </div>
 <%= form_with url: "/admin/invoices/#{@invoice.id}/update", method: :patch, local: true do |form| %>
 <strong><%= form.label :status %></strong>
